# saaransh-data-platform

./: .gitignore  README.md  pyproject.toml
config/: data_sources.yaml
docs/: architecture.md
docs/adr/: 001-notebook-output-stripping.md  002-NSE-scaper-improvement.md
experiments/exp_001_nifty_500/: nifty500.ipynb  nse_scraper.py
experiments/exp_001_nifty_500_metadata/: nifty500.ipynb  nse_scraper.py
experiments/exp_001_scraping_strategy/: market_data.py  nifty500.ipynb
experiments/exp_002_alphastreet/: alphastreet.ipynb  alphastreet.py  db.py
src/: __init__.py  main.py
src/common/: config.py  path.py  utils.py
src/data_source/nse/: models.py  normalizer.py  scraper.py
