[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saaransh-data-platform"
version = "0.1.0"
description = "Data platform for Saaransh labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "requests>=2.33.0",
]

[project.scripts]
saaransh = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
]
