[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saaransh-data-platform"
version = "0.1.0"
description = "Data platform for Saaransh labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
]

[project.scripts]
saaransh = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.1",
]
